--- a/Boy8/Content/Site.css
+++ b/Boy8/Content/Site.css
@@ -1,6 +1,10 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿.html-v {
+    height: 100%;
+}
+
+body {
+    /*padding-top: 50px;
+    padding-bottom: 20px;*/
     /*background-image: url("../images/boy7.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -46,6 +50,23 @@ input[type="checkbox"].input-validation-error {
 }
 
 /*Baby customized section begin*/
+.container-full {
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+}
+
+/*.carousel .item.bb-carousel-item {
+    width: 100%;
+    min-height: 100%;
+    /*height: 100%;*/
+}
+
+/*.carousel-inner > .item > img.bb-carousel-item {
+    max-width: 100%;
+    height: auto;
+}*/
 
 .bb-hlsection {
     padding-top: 4px;
@@ -65,6 +86,8 @@ input[type="checkbox"].input-validation-error {
 
 .bb-carouselhelper {
     margin-top: 0px;
+    /*min-height: 100%;
+    height: auto;*/
 }
 
 .bb-navlogin-right {
@@ -73,4 +96,122 @@ input[type="checkbox"].input-validation-error {
 
 .bb-navbar {
     margin-top: 0px;
+}
+
+.bb-badge {
+    margin-left:7px;
+}
+
+.bb-video-html5player {
+    margin-top: 20px;
+}
+
+.bb-video-watchlist {
+    margin-top: 20px;
+}
+
+.bb-video-item {
+    padding-left: 1px;
+    padding-right: 1px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+}
+
+.navbar-transparent {
+    background-color: transparent;
+    position: absolute;
+    color: #ffffff;
+    top: 0px;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    padding: 35px 0px;
+}
+
+.bb-nav > li > a:hover, .bb-nav > li > a:focus {
+    background-color: rgba(255, 255, 255, .25);
+}
+
+.bb-nav > li.open > a.dropdown-toggle {
+    color: #ffffff;
+    background-color: #2d3235;
+    opacity: .7;
+}
+
+.navbar-nav > li > a {
+    color: white;
+    border-radius: 4px;
+}
+
+.navbar-header > a {
+    color: white;
+}
+
+.navbar-brand {
+    float: left;
+    padding: 13px 12px;
+    line-height: 20px;
+    font-size: 34px;
+    font-family: "Gotham Rounded Book", "Helvetica Neue", Helvetica, Arial,;
+}
+
+@media screen and (min-width: 768px) {
+    .hero {
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
+
+    .container .hero {
+        padding-right: 60px;
+        padding-left: 60px;
+    }
+
+    .hero h1,
+    .hero .h1 {
+        font-size: 60px;
+    }
+}
+
+.hero {
+    /*padding-top: 0px;
+    padding-bottom: 0px;*/
+    margin: 0px;
+    font-size: 21px;
+    line-height: 2.1428571435;
+    min-height: 100vh;
+    position: relative;
+}
+
+    .hero .landing {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        min-height: 100%;
+        background: url(../images/boy7.jpg) no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        border-bottom-style: solid;
+        border-bottom-color: #d3d3d3;
+        border-bottom-width: 1px;
+        -webkit-animation: fadein 1s;
+        -moz-animation: fadein 1s;
+        -ms-animation: fadein 1s;
+        -o-animation: fadein 1s;
+        animation: fadein 1s;
+    }
+
+.bb-body {
+    height: 100%;
+    position: relative;
+    font-family: "Gotham Rounded Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    line-height: 1.6;
+    color: #4f5962;
+    background-color: #ffffff;
+}
+
+.bb-body-V1 {
+    padding-top: 50px;
 }
