--- a/Boy8/Views/Home/Comming.cshtml
+++ b/Boy8/Views/Home/Comming.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container bb-divtodo">
+<div class="container">
     <h2>
         We are working hard to bring it for you...
     </h2>
