--- a/Boy8/Views/Home/Contact.cshtml
+++ b/Boy8/Views/Home/Contact.cshtml
@@ -1,23 +1,18 @@
 ﻿@{
     ViewBag.Title = "宝宝家";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_PicLayout.cshtml";
 }
+<div class="container bb-about">
+    <div class="row">
+        <form role="form" id="contact">
+            <div class="form-group">
+                <h1>Contact</h1>
+                <p><input type="text" class="form-control" placeholder="姓名" /></p>
+                <p><input type="mail" class="form-control" placeholder="邮箱" /></p>
+                <p><textarea name="" class="form-control" id="" rows="5" placeholder="正文"></textarea></p>
+            </div>
+            <button type="submit" class="form-control btn btn-default submit">提交</button>
+        </form>
 
-<div class="container bb-divtodo">
-    <h2>
-        @ViewBag.Title.
-    </h2>
-    <address>
-        <strong><a href="http://www.weibo.com/u/1712451982">爸爸的微博</a>    <a href="mailto:Nakayamaqs@gmail.com">联系爸爸</a> </strong> <br />
-        <a href="mailto:abotian69@gmail.com">联系妈妈</a>
-    </address>
-
-    <h3>@ViewBag.Message</h3>
-
-    <address>
-        文二路<br />
-        杭州, 浙江<br />
-        <abbr title="Phone">P:</abbr>
-        135 8831 9441
-    </address>
+    </div>
 </div>
