--- a/Boy8/Views/Home/Index.cshtml
+++ b/Boy8/Views/Home/Index.cshtml
@@ -1,115 +1,145 @@
 ﻿@{
-    ViewBag.Title = "七仔";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "首页";
+    Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
-
-
-<!-- Carousel
-================================================== -->
-<div id="myCarousel" class="carousel slide bb-carouselhelper" data-ride="carousel">
-
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="item active">
-            <img class="" data-src="holder.js/900x500/auto/#777:#7a7a7a/text:First slide" src="../images/boy7.jpg" alt="First slide">
-            <div class="container">
-                <div class="carousel-caption">
-                    <h1>七仔六个月</h1>
-                    <p>Note: 如果你想看更多照片 <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">赞一个</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="item ">
-            <img class="" data-src="holder.js/900x500/auto/#666:#6a6a6a/text:Second slide" src="../images/main2.jpg" alt="Second slide">
-            <div class="container">
-                <div class="carousel-caption">
-                    <h1>还是七仔</h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Timeline</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="item ">
-            <img class="" data-src="holder.js/900x500/auto/#555:#5a5a5a/text:Third slide" src="../images/main3.jpg" alt="Third slide">
-            <div class="container">
-                <div class="carousel-caption">
-                    <h1>七仔长大了</h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="https://www.dropbox.com/sh/2idz0sjr4uetsg0/AADzZ4Xnb20OYHuZN7PKthpxa" role="button">Dropbox 相册</a></p>
-                </div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="hero  col-lg-12 col-md-12 col-xs-12 col-sm-12">
+            <div class="landing">
+                @*remove div below*@
+                @*<div class="container">
+                        <div class="wrapper">
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <img src="https://cf-01.zirtual.com/website_v2/img/headline-work-life-balanced.png" class="shadow-offset img-responsive">
+                                </div> <!-- /.col -->
+                            </div> <!-- /.row -->
+                        </div> <!-- /.wrapper -->
+                    </div>*@
             </div>
         </div>
     </div>
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-
 </div>
-<!-- /.carousel -->
-<!-- Marketing messaging and featurettes
-================================================== -->
-<!-- Wrap the rest of the page in another container to center all the content. -->
 
-<div class="container-full">
-    <div class="container marketing">
-        <!-- Three columns of text below the carousel -->
+
+<div class="container-fluid marketing bb-marketing">
+    <!-- Three columns of text below the carousel -->
+    <div class="row">
+        <div class="col-lg-3 bb-div-thumbnail">
+            <img class="img-circle" data-src="holder.js/140x140" src="~/images/avatar/boy7/gd1.jpg" alt="Generic placeholder image">
+            <h2>天然萌</h2>
+            <p>我知道爸爸拍我，镜头感还好吧！</p>
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-lg-3 bb-div-thumbnail">
+            <img class="img-circle" data-src="holder.js/140x140" src="~/images/avatar/boy7/gd2.jpg" alt="Generic placeholder image">
+            <h2>粑粑，你过来</h2>
+            <p>再靠近点，我太小，还爬不动.</p>
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+
+        <div class="col-lg-3 bb-div-thumbnail">
+            <img class="img-circle" data-src="holder.js/140x140" src="~/images/avatar/boy7/gd3.jpg" alt="Generic placeholder image">
+            <h2>嘿嘿</h2>
+            <p>似笑非笑，爸爸你奈我何？</p>
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-lg-3 bb-div-thumbnail">
+            <img class="img-circle" data-src="holder.js/140x140" src="~/images/avatar/boy7/gd4.jpg" alt="Generic placeholder image">
+            <h2>七仔出浴</h2>
+            <p>诡秘的笑，河北农民范儿。</p>
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+    </div><!-- /.row -->
+    <!-- START THE FEATURETTES -->
+    @*<hr class="featurette-divider">*@
+    <div class="row featurette bb-content-sec">
+        <div class="col-md-7">
+            <h2 class="featurette-heading">The baby is insanely great! <span class="text-muted">It'll blow your mind.</span></h2>
+            <p class="lead">他笑，他哭，他闹，他什么东西都想要. 这个世界对他而言是全新而模糊的。宝宝试着认识世界，而爸妈试着了解宝宝。</p>
+        </div>
+        <div class="col-md-5">
+            <img class="featurette-image img-responsive img-rounded" data-src="holder.js/500x500/auto" src="~/images/b500.jpg" alt="Generic placeholder image">
+        </div>
+    </div>
+    @*<hr class="featurette-divider">*@
+    <section class="bb-piccontent-sec">
+        <h2 class="text-center">Change this Content. Change the world.</h2>
         <div class="row">
-            <div class="col-lg-4">
-                <img class="img-circle" data-src="holder.js/140x140" src="../images/ma7.jpg" alt="Generic placeholder image">
-                <h2>Heading</h2>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-            </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-                <img class="img-circle" data-src="holder.js/140x140" src="../images/ba1.jpg" alt="Generic placeholder image">
-                <h2>Heading</h2>
-                <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-            </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-                <img class="img-circle" data-src="holder.js/140x140" src="../images/ma7.jpg" alt="Generic placeholder image">
-                <h2>Heading</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-            </div><!-- /.col-lg-4 -->
-        </div><!-- /.row -->
-        <!-- START THE FEATURETTES -->
+            <div class="col-sm-8 col-sm-offset-2">
+                <img src="~/Images/bg_smartphones.jpg" class="img-responsive center-block ">
 
-        <hr class="featurette-divider">
-        <div class="row featurette">
-            <div class="col-md-7">
-                <h2 class="featurette-heading">The baby is insanely great! <span class="text-muted">It'll blow your mind.</span></h2>
-                <p class="lead">他笑，他哭，他闹，他什么东西都想要. 这个世界对他而言是全新而模糊的。宝宝试着认识世界，而爸妈试着了解宝宝。</p>
-            </div>
-            <div class="col-md-5">
-                <img class="featurette-image img-responsive img-rounded" data-src="holder.js/500x500/auto" src="../images/b500.jpg" alt="Generic placeholder image">
-            </div>
-        </div>
-        <hr class="featurette-divider">
-        <div class="row featurette">
-            <div class="col-md-5">
-                <img class="featurette-image img-responsive img-rounded" data-src="holder.js/500x500/auto" src="../images/b500.jpg" alt="Generic placeholder image">
-            </div>
-            <div class="col-md-7">
-                <h2 class="featurette-heading">Yes, this is the baby we want! <span class="text-muted">他会抓你！.</span></h2>
-                <p class="lead">这个小家伙精力充沛，一旦他认定目标，哪怕爬也要爬到。对了，不要试着阻止他，小心你的头发。</p>
+                <p class="text-center">
+                    <h4 class="text-center">
+                        为了更好的体验，我们为特制了移动应用。
+                        <img alt="Apple应用下载" class="ios-app-badge" src="~/Images/General/apple_appstore.png">
+                        <img alt="Google Play应用下载" src="~/Images/General/android_store.png">
+                        @*<button type="button" class="btn btn-info">Apple应用下载</button>*@
+                    </h4>
+                </p>
             </div>
         </div>
-        <hr class="featurette-divider">
+    </section>
+    @*<hr class="featurette-divider">*@
+    <div class="row featurette bb-content-sec">
+        <div class="col-md-5">
+            <img class="featurette-image img-responsive img-rounded" data-src="holder.js/500x500/auto" src="~/images/b500.jpg" alt="Generic placeholder image">
+        </div>
+        <div class="col-md-7">
+            <h2 class="featurette-heading">Yes, this is the baby we want! <span class="text-muted">他会抓你！.</span></h2>
+            <p class="lead">这个小家伙精力充沛，一旦他认定目标，哪怕爬也要爬到。对了，不要试着阻止他，小心你的头发。</p>
+        </div>
+    </div>
+    @*<hr class="featurette-divider">
         <div class="row featurette">
             <div class="col-md-7">
                 <h2 class="featurette-heading">你会爱上他！ <span class="text-muted">The one.</span></h2>
                 <p class="lead">每三个小时，他要吃奶，要玩，要睡觉，爱洗澡。 生命真可爱.</p>
             </div>
             <div class="col-md-5">
-                <img class="featurette-image img-responsive img-rounded" data-src="holder.js/500x500/auto" src="../images/b500.jpg" alt="Generic placeholder image">
+                <img class="featurette-image img-responsive img-rounded" data-src="holder.js/500x500/auto" src="~/images/b500.jpg" alt="Generic placeholder image">
             </div>
+        </div>*@
+
+</div>
+
+
+<div class="container marketing bb-marketing bb-socialsection">
+    <h1 class="text-center">Social Media Fascination</h1>
+    <div class="row bb-socialicon">
+        <!--fontawesome icons-->
+        <div class="col-sm-1 col-sm-offset-2 col-xs-4 text-center">
+            <i class="glyphicon glyphicon-leaf" title="share with social apps"></i>
         </div>
-        <hr class="featurette-divider">
+        <div class="col-sm-1 col-xs-4 text-center">
+            <i class="glyphicon glyphicon-leaf" title="share with social apps"></i>
+        </div>
+        <div class="col-sm-1 col-xs-4 text-center">
+            <i class="glyphicon glyphicon-leaf" title="share with social apps"></i>
+        </div>
+        <div class="col-sm-1 col-xs-4 text-center">
+            <i class="glyphicon glyphicon-leaf" title="share with social apps"></i>
+        </div>
+        <div class="col-sm-1 col-xs-4 text-center">
+            <i class="glyphicon glyphicon-leaf" title="share with social apps"></i>
+        </div>
+        <div class="col-sm-1 col-xs-4 text-center">
+            <i class="glyphicon glyphicon-leaf" title="share with social apps"></i>
+        </div>
+        <div class="col-sm-1 col-xs-4 text-center">
+            <i class="glyphicon glyphicon-leaf" title="share with social apps"></i>
+        </div>
+        <div class="col-sm-1 col-xs-4 text-center">
+            <i class="glyphicon glyphicon-leaf" title="share with social apps"></i>
+        </div>
     </div>
 </div>
+
+<div class="container-fluid">
+    <footer class=" bb-footcontainer">
+        <p class="pull-right"><a href="#" title="回到顶部"><i class="glyphicon glyphicon-circle-arrow-up bb-foot-backicon"></i></a></p>
+        <p>Copyright &copy; 2014 Babywecare Inc. &middot; @Html.ActionLink("隐私", "Comming", "Home") &middot; @Html.ActionLink("服务条款", "Comming", "Home")</p>
+    </footer> <!-- FOOTER -->
+</div>
+
+
