--- a/Boy8/Views/Shared/_Layout.cshtml
+++ b/Boy8/Views/Shared/_Layout.cshtml
@@ -30,18 +30,20 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">我儿七仔</a>
+                    <a class="navbar-brand" href="#">七仔</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class="active">@Html.ActionLink("首页", "Index", "Home")</li>
                         <li>@Boy8.Helper.BoyLinkExtension.ActionLinkWithBadge("42", "故事", "Index", "Story")</li>
+                        <li>@Boy8.Helper.BoyLinkExtension.ActionLinkWithBadge("35", "照片流", "Showpictures", "Home")</li>
                         <li>@Html.ActionLink("精彩时刻", "Events", "Home")</li>
                         @*<a href="../Story">故事<span class="badge"> 42</span></a>*@
                         <li>@Html.ActionLink("关于", "About", "Home")</li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">更多<b class="caret"></b></a>
                             <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("新版", "v1", "Home")</li>
                                 <li><a href="http://www.weibo.com/u/1712451982">爸爸的微博</a></li>
                                 <li>@Html.ActionLink("联系我们", "Contact", "Home")</li>
                                 <li><a href="#">Something else here</a></li>
@@ -62,9 +64,9 @@
     @RenderBody()
     <div class="container bb-footcontainer">
         <footer>
-            <p class="pull-right"><a href="#">Back to top</a></p>
+            <p class="pull-right"><a href="#" title="回到顶部"><i class="glyphicon glyphicon-circle-arrow-up bb-foot-backicon"></i></a></p>
             <p>Copyright &copy; 2014 Babywecare Inc. &middot; @Html.ActionLink("隐私", "Comming", "Home") &middot; @Html.ActionLink("服务条款", "Comming", "Home")</p>
-        </footer> <!-- FOOTER -->
+        </footer>
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
