--- a/Boy8/Views/Shared/_PicLayout.cshtml
+++ b/Boy8/Views/Shared/_PicLayout.cshtml
@@ -63,5 +63,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    @RenderSection("myscripts", required: false)
+    
 </body>
 </html>
