--- a/Boy8/Views/Home/Index.cshtml
+++ b/Boy8/Views/Home/Index.cshtml
@@ -109,6 +109,7 @@
     <div class="row bb-socialicon">
         <!--fontawesome icons-->
         <div class="col-sm-1 col-sm-offset-2 col-xs-4 text-center">
+            @*<img src="~/Images/social/weibo44.png" />*@
             <i class="glyphicon glyphicon-leaf" title="share with social apps"></i>
         </div>
         <div class="col-sm-1 col-xs-4 text-center">
